------------------------------------------------------------------------
r69 | liske | 2008-07-03 15:10:21 +0200 (Thu, 03 Jul 2008) | 2 lines

Changed package building process to call configure.

------------------------------------------------------------------------
r68 | ellguth | 2008-07-03 14:55:47 +0200 (Thu, 03 Jul 2008) | 2 lines

Added missing files.

------------------------------------------------------------------------
r67 | ellguth | 2008-07-03 14:54:21 +0200 (Thu, 03 Jul 2008) | 2 lines

Generate Makefile,etc... with automake,autoconf,...

------------------------------------------------------------------------
r66 | liske | 2008-07-03 14:43:23 +0200 (Thu, 03 Jul 2008) | 2 lines

Debianisize.

------------------------------------------------------------------------
r65 | liske | 2008-07-03 11:20:51 +0200 (Thu, 03 Jul 2008) | 4 lines

- shortcuts changed
- maintain GList of hold file locks and release them on quit/SIGTERM
- fixed SIGINT handler

------------------------------------------------------------------------
r64 | liske | 2008-07-03 10:00:33 +0200 (Thu, 03 Jul 2008) | 3 lines

Change apt-dater to use XDG Base Directory Specification based 
config/stas files. Cleanup config files. Add customized screenrc.

------------------------------------------------------------------------
r63 | ellguth | 2008-07-02 08:31:39 +0200 (Wed, 02 Jul 2008) | 1 line

Moved Makefile to src/Makefile
------------------------------------------------------------------------
r62 | ellguth | 2008-07-02 08:31:38 +0200 (Wed, 02 Jul 2008) | 1 line

Moved ui.h to src/ui.h
------------------------------------------------------------------------
r61 | ellguth | 2008-07-02 08:31:36 +0200 (Wed, 02 Jul 2008) | 1 line

Moved stats.h to src/stats.h
------------------------------------------------------------------------
r60 | ellguth | 2008-07-02 08:31:35 +0200 (Wed, 02 Jul 2008) | 1 line

Moved sighandler.h to src/sighandler.h