@@ -1,9 +1,13 @@
 SUBDIRS = 								\
+	man								\
 	src
 
 AUTOMAKE_OPTIONS = 							\
 	1.9								\
 	dist-bzip2
+
+changelog:
+	LANG=C svn log > ChangeLog
 
 distclean-local:
 	rm -rf *.cache *~ .project .settings .cdtproject
